--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Set environment variables
       shell: bash
       run: |
-        echo '::set-env name=RUSTFLAGS::--cap-lints=warn'
+        echo 'RUSTFLAGS=--cap-lints=warn' >> $GITHUB_ENV
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
