Add a workflow to continuosly collect performance metrics

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,11 @@
-on:
-  pull_request:
-    types: [opened, synchronize, reopened]
-  push:
-    branches:
-      - master
-      - "0.[0-9]+.x"
-      - "1.[0-9]+.x"
+# on:
+#   pull_request:
+#     types: [opened, synchronize, reopened]
+#   push:
+#     branches:
+#       - master
+#       - "0.[0-9]+.x"
+#       - "1.[0-9]+.x"
 
 name: CI Tests
 
