--- a/examples/mysql/getting_started_step_1/Cargo.toml
+++ b/examples/mysql/getting_started_step_1/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 diesel = { version = "2.0.0", path = "../../../diesel", features = ["mysql"] }
 dotenv = "0.15"
+chrono = { version = "0.4.19", default-features = false, features = ["clock", "std"] }
 
 [[bin]]
 name = "show_posts"
