--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ members = [
     "diesel_migrations/migrations_internals",
     "diesel_migrations/migrations_macros",
     "diesel_dynamic_schema",
-    #"examples/mysql/all_about_inserts",
-    #"examples/mysql/getting_started_step_1",
+    "examples/mysql/all_about_inserts",
+    "examples/mysql/getting_started_step_1",
     #"examples/mysql/getting_started_step_2",
     #"examples/mysql/getting_started_step_3",
     #"examples/postgres/advanced-blog-cli",
