--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ members = [
     #"examples/postgres/getting_started_step_3",
     #"examples/postgres/custom_types",
     #"examples/sqlite/all_about_inserts",
-    "examples/sqlite/getting_started_step_1",
+    #"examples/sqlite/getting_started_step_1",
     #"examples/sqlite/getting_started_step_2",
     #"examples/sqlite/getting_started_step_3",
 ]
