--- a/diesel_cli/Cargo.toml
+++ b/diesel_cli/Cargo.toml
@@ -47,7 +47,7 @@ regex = "1.3.9"
 url = { version = "2.1.0" }
 
 [features]
-default = ["sqlite", "mysql"]
+default = ["mysql"]
 postgres = ["diesel/postgres", "url", "uses_information_schema"]
 sqlite = ["diesel/sqlite"]
 mysql = ["diesel/mysql", "url", "uses_information_schema"]
