--- a/diesel/Cargo.toml
+++ b/diesel/Cargo.toml
@@ -14,7 +14,9 @@ edition = "2018"
 
 [dependencies]
 byteorder = "1.0"
-chrono = {version = "0.4.19", optional = true, default-features = false, features = ["clock", "std"] }
+#chrono = {version = "0.4.19", optional = true, default-features = false, features = ["clock", "std"] }
+chrono = { git="https://github.com/chronotope/chrono", optional = true, default-features = false, features = ["clock", "std"] }
+
 libc = { version = "0.2.0", optional = true }
 libsqlite3-sys = { version = ">=0.8.0, <0.23.0", optional = true, features = ["min_sqlite_version_3_7_16"] }
 mysqlclient-sys = { version = "0.2.0", optional = true }
