修改chrono从github下载

--- a/examples/mysql/all_about_inserts/Cargo.toml
+++ b/examples/mysql/all_about_inserts/Cargo.toml
@@ -9,7 +9,11 @@ diesel = { version = "2.0.0", path = "../../../diesel", features = ["mysql", "ch
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-chrono = { version = "0.4.19", default-features = false, features = ["clock", "std"] }
+#chrono = { version = "0.4.19",  optional = true, default-features = false, features = ["clock", "std"] }
+chrono = { git="https://github.com/chronotope/chrono",version = "0.4.19", optional = true, default-features = false, features = ["clock", "std"] }
 
 [lib]
 doc = false
+
+[features]
+default = ["chrono"]
