--- a/diesel/Cargo.toml
+++ b/diesel/Cargo.toml
@@ -14,8 +14,8 @@ edition = "2018"
 
 [dependencies]
 byteorder = "1.0"
-chrono = {version = "0.4.19", optional = true, default-features = false, features = ["clock", "std"] }
-#chrono = { git="https://github.com/chronotope/chrono", optional = true, default-features = false, features = ["clock", "std"] }
+#chrono = {version = "0.4.19", optional = true, default-features = false, features = ["clock", "std"] }
+chrono = { git="https://github.com/chronotope/chrono", optional = true, default-features = false, features = ["clock", "std"] }
 
 libc = { version = "0.2.0", optional = true }
 libsqlite3-sys = { version = ">=0.8.0, <0.23.0", optional = true, features = ["min_sqlite_version_3_7_16"] }
@@ -46,7 +46,7 @@ ipnetwork = ">=0.12.2, <0.19.0"
 quickcheck = "0.9"
 
 [features]
-default = ["with-deprecated", "32-column-tables"]
+default = ["with-deprecated", "32-column-tables","chrono"]
 extras = ["chrono", "serde_json", "uuid", "network-address", "numeric", "r2d2"]
 unstable = ["diesel_derives/nightly"]
 large-tables = ["32-column-tables"]
