--- a/diesel_bench/Cargo.toml
+++ b/diesel_bench/Cargo.toml
@@ -27,13 +27,16 @@ diesel-async = {git = "https://github.com/weiznich/diesel_async", rev = "06b3416
 #diesel-async = {path = "../../diesel-async", optional = true}
 
 [dependencies.diesel]
-path = "../diesel"
+#path = "../diesel"
+version = "1.4"
 default-features = false
 features = []
 
 [build-dependencies]
-diesel = { path = "../diesel", default-features = false }
-diesel_migrations = { path = "../diesel_migrations" }
+diesel = {version = "1.4.8", default-features = false}
+diesel_migrations = "1.4"
+#diesel = { path = "../diesel", default-features = false }
+#diesel_migrations = { path = "../diesel_migrations" }
 dotenvy = "0.15"
 
 
@@ -52,4 +55,4 @@ sqlx-bench = ["sqlx", "tokio", "sqlx/runtime-tokio-rustls"]
 
 [replace]
 "quaint:0.2.0-alpha.13" = {git = "https://github.com/prisma/quaint", rev = "e077df3"}
-"https://github.com/diesel-rs/diesel#2.0.0" = { path = "../diesel"}
+#"https://github.com/diesel-rs/diesel#2.0.0" = { path = "../diesel"}
