diesel的数据列feature改为32,64,80,100,128五种情况，并且一次包含。

--- a/diesel/Cargo.toml
+++ b/diesel/Cargo.toml
@@ -67,7 +67,7 @@ huge-tables = ["64-column-tables"]
 45-column-tables = []
 46-column-tables = []
 47-column-tables = []
-48-column-tables = []
+48-column-tables = ["32-column-tables","33-column-tables","34-column-tables","35-column-tables","36-column-tables","37-column-tables","38-column-tables","39-column-tables","40-column-tables","41-column-tables","42-column-tables","43-column-tables","44-column-tables","45-column-tables","46-column-tables","47-column-tables"]
 49-column-tables = []
 50-column-tables = []
 51-column-tables = []
@@ -83,7 +83,7 @@ huge-tables = ["64-column-tables"]
 61-column-tables = []
 62-column-tables = []
 63-column-tables = []
-64-column-tables = []
+64-column-tables = ["48-column-tables","49-column-tables","32-column-tables","50-column-tables","51-column-tables","52-column-tables","53-column-tables","54-column-tables","55-column-tables","56-column-tables","57-column-tables","58-column-tables","59-column-tables","60-column-tables","61-column-tables","62-column-tables","63-column-tables"]
 65-column-tables = []
 66-column-tables = []
 67-column-tables = []
@@ -99,7 +99,7 @@ huge-tables = ["64-column-tables"]
 77-column-tables = []
 78-column-tables = []
 79-column-tables = []
-80-column-tables = []
+80-column-tables = ["64-column-tables","65-column-tables","66-column-tables","67-column-tables","68-column-tables","69-column-tables","70-column-tables","71-column-tables","72-column-tables","73-column-tables","74-column-tables","75-column-tables","76-column-tables","77-column-tables","78-column-tables","79-column-tables"]
 81-column-tables = []
 82-column-tables = []
 83-column-tables = []
@@ -119,7 +119,7 @@ huge-tables = ["64-column-tables"]
 97-column-tables = []
 98-column-tables = []
 99-column-tables = []
-100-column-tables = []
+100-column-tables = ["80-column-tables","81-column-tables","82-column-tables","83-column-tables","84-column-tables","85-column-tables","86-column-tables","87-column-tables","88-column-tables","89-column-tables","90-column-tables","91-column-tables","92-column-tables","93-column-tables","94-column-tables","95-column-tables","96-column-tables","97-column-tables","98-column-tables","99-column-tables"]
 101-column-tables = []
 102-column-tables = []
 103-column-tables = []
@@ -147,7 +147,7 @@ huge-tables = ["64-column-tables"]
 125-column-tables = []
 126-column-tables = []
 127-column-tables = []
-128-column-tables = []
+128-column-tables = ["100-column-tables","101-column-tables","102-column-tables","103-column-tables","104-column-tables","105-column-tables","106-column-tables","107-column-tables","108-column-tables","109-column-tables","110-column-tables","111-column-tables","112-column-tables","113-column-tables","114-column-tables","115-column-tables","116-column-tables","117-column-tables","118-column-tables","119-column-tables","120-column-tables","121-column-tables","122-column-tables","123-column-tables","124-column-tables","125-column-tables","126-column-tables","127-column-tables"]
 
 
 postgres = ["pq-sys", "bitflags", "diesel_derives/postgres"]
