--- a/diesel_tests/Cargo.toml
+++ b/diesel_tests/Cargo.toml
@@ -13,7 +13,7 @@ dotenv = ">=0.8, <0.11"
 
 [dependencies]
 assert_matches = "1.0.1"
-chrono = { version = "0.4" }
+chrono = { version = "0.4", default-features = false}
 diesel = { path = "../diesel", default-features = false, features = ["quickcheck", "chrono", "uuidv07", "serde_json", "network-address", "numeric", "with-deprecated"] }
 diesel_migrations = { version = "1.4.0" }
 diesel_infer_schema = { version = "1.4.0" }
