--- a/examples/mysql/all_about_inserts/Cargo.toml
+++ b/examples/mysql/all_about_inserts/Cargo.toml
@@ -8,7 +8,7 @@ diesel = { version = "1.4.0", features = ["mysql", "chrono"] }
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-chrono = "0.4"
+chrono = { version = "0.4", default-features = false}
 
 [lib]
 doc = false
