--- a/examples/postgres/advanced-blog-cli/Cargo.toml
+++ b/examples/postgres/advanced-blog-cli/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
 
 [dependencies]
 bcrypt = "0.8.1"
-chrono = "0.4.0"
+chrono = { version = "0.4", default-features = false}
 diesel = { version = "1.4.0", features = ["postgres", "chrono"] }
 dotenv = "0.10.0"
 structopt = "0.1.6"
