--- a/diesel/Cargo.toml
+++ b/diesel/Cargo.toml
@@ -21,7 +21,7 @@ mysqlclient-sys = { version = ">=0.1.0, <0.3.0", optional = true }
 pq-sys = { version = ">=0.3.0, <0.5.0", optional = true }
 quickcheck = { version = "0.4", optional = true }
 serde_json = { version = ">=0.8.0, <2.0", optional = true }
-time = { version = "0.3.9", optional = true, features = ["macros"] }
+time = { version = "=0.3.9", optional = true, features = ["macros", "formatting", "parsing"] }
 url = { version = "1.4.0", optional = true }
 uuid = { version = ">=0.2.0, <0.7.0", optional = true, features = ["use_std"] }
 uuidv07 = { version = ">=0.7.0, <0.9.0", optional = true, package = "uuid"}
