--- a/examples/mysql/all_about_inserts/Cargo.toml
+++ b/examples/mysql/all_about_inserts/Cargo.toml
@@ -10,7 +10,7 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 #chrono = { version = "0.4.19",  optional = true, default-features = false, features = ["clock", "std"] }
-chrono = { git="https://github.com/chronotope/chrono",version = "0.4.19", default-features = false, features = ["clock", "std"] }
+chrono = {git="https://github.com/chronotope/chrono",version = "0.4.20-rc.1", default-features = false, features = ["clock", "std"] }
 
 [lib]
 doc = false
