--- a/examples/postgres/all_about_updates/Cargo.toml
+++ b/examples/postgres/all_about_updates/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2018"
 publish = false
 
 [dependencies]
-diesel = { version = "2.0.0-rc.1", path = "../../../diesel", features = ["postgres"] }
+diesel = { version = "2.0.0", path = "../../../diesel", features = ["postgres"] }
 
 [lib]
 doc = false
