--- a/examples/postgres/custom_types/Cargo.toml
+++ b/examples/postgres/custom_types/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2018"
 publish = false
 
 [dependencies]
-diesel = { path = "../../../diesel", version = "2.0.0-rc.1", features = ["postgres"] }
+diesel = { path = "../../../diesel", version = "2.0.0", features = ["postgres"] }
 
 [[bin]]
 name = "custom-types"
