--- a/examples/postgres/getting_started_step_3/Cargo.toml
+++ b/examples/postgres/getting_started_step_3/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2018"
 publish = false
 
 [dependencies]
-diesel = { version = "2.0.0-rc.1", path = "../../../diesel", features = ["postgres"] }
+diesel = { version = "2.0.0", path = "../../../diesel", features = ["postgres"] }
 dotenvy = "0.15"
 
 [[bin]]
