--- a/examples/sqlite/all_about_inserts/Cargo.toml
+++ b/examples/sqlite/all_about_inserts/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2018"
 publish = false
 
 [dependencies]
-diesel = { version = "2.0.0-rc.1", path = "../../../diesel", features = ["sqlite", "chrono"] }
+diesel = { version = "2.0.0", path = "../../../diesel", features = ["sqlite", "chrono"] }
 serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.68"
 chrono = { version = "0.4.19", default-features = false, features = ["clock", "std"] }
