diesel_cli: Add config option for custom type derives

--- a/diesel_cli/src/default_files/diesel.toml
+++ b/diesel_cli/src/default_files/diesel.toml
@@ -3,6 +3,7 @@
 
 [print_schema]
 file = "src/schema.rs"
+custom_type_derives = ["diesel::sql_types::SqlType", "diesel::query_builder::QueryId"]
 
 [migrations_directory]
 dir = "migrations"
