--- a/diesel_cli/tests/print_schema/print_schema_custom_types_overriding_derives_works/diesel.toml
+++ b/diesel_cli/tests/print_schema/print_schema_custom_types_overriding_derives_works/diesel.toml
@@ -1,4 +1,4 @@
 [print_schema]
 file = "src/schema.rs"
 with_docs = true
-custom_type_derives = ["diesel::sql_types::SqlType", "core::fmt::Debug"]
+custom_type_derives = ["core::fmt::Debug"]
