--- a/diesel_bench/Cargo.toml
+++ b/diesel_bench/Cargo.toml
@@ -10,7 +10,7 @@ autobenches = false
 
 [dependencies]
 dotenvy = "0.15"
-criterion = "0.3.2"
+criterion = {version = "0.3.2", default-features = false, features = ["csv_output", "cargo_bench_support"]}
 sqlx = {version = "0.6", features = ["runtime-tokio-rustls"], optional = true}
 tokio = {version = "1", optional = true}
 rusqlite = {version = "0.27", optional = true}
@@ -18,9 +18,9 @@ rust_postgres = {version = "0.19", optional = true, package = "postgres"}
 rust_mysql = {version = "22.1", optional = true, package = "mysql"}
 rustorm = {version = "0.20", optional = true}
 rustorm_dao = {version = "0.20", optional = true}
-quaint = {version = "=0.2.0-alpha.13", optional = true}
+quaint = {version = "=0.2.0-alpha.13", optional = true, features = ["uuid"]}
 serde = {version = "1", optional = true, features = ["derive"]}
-sea-orm = {version = "0.9", optional = true, features = ["runtime-tokio-rustls"]}
+sea-orm = {version = "0.10", optional = true, features = ["runtime-tokio-rustls"]}
 futures = {version = "0.3", optional = true}
 diesel-async = {version = "0.1", optional = true, default-features = false}
 criterion-perf-events = { version = "0.2", optional = true}
@@ -54,5 +54,5 @@ fast_run = []
 
 
 [patch.crates-io]
-quaint = {git = "https://github.com/prisma/quaint", rev = "e077df3"}
+quaint = {git = "https://github.com/prisma/quaint", rev = "08831dfb72d4d970aa62d7f4094a3c6c04c4b136"}
 diesel = {path = "../diesel"}
