Add a `#[derive(MultiConnection)]` proc-macro
This proc macro implements `Connection` and related traits for an enum
of connections for different database backends. This allows to easily
support multiple database systems at the same time. I've chosen to
implement this feature as a derive, instead of providing just one
`AnyConnection` enum with all diesel connection types, to allow third
party connection implementations to be used there as well.

--- a/diesel/Cargo.toml
+++ b/diesel/Cargo.toml
@@ -69,8 +69,9 @@ numeric = ["num-bigint", "bigdecimal", "num-traits", "num-integer"]
 postgres_backend = ["diesel_derives/postgres", "bitflags", "byteorder", "itoa"]
 mysql_backend = ["diesel_derives/mysql", "byteorder"]
 returning_clauses_for_sqlite_3_35 = []
-i-implement-a-third-party-backend-and-opt-into-breaking-changes = []
+i-implement-a-third-party-backend-and-opt-into-breaking-changes = ["diesel_derives/i-implement-a-third-party-backend-and-opt-into-breaking-changes"]
 nightly-error-messages = []
+r2d2 = ["diesel_derives/r2d2", "dep:r2d2"]
 
 [package.metadata.docs.rs]
 features = ["postgres", "mysql", "sqlite", "extras"]
