--- a/diesel_derives/Cargo.toml
+++ b/diesel_derives/Cargo.toml
@@ -41,3 +41,5 @@ mysql = []
 128-column-tables = ["64-column-tables"]
 without-deprecated = []
 with-deprecated = []
+r2d2 = []
+i-implement-a-third-party-backend-and-opt-into-breaking-changes = []
