Use  in the implementation of diesel-cli

--- a/diesel_cli/Cargo.toml
+++ b/diesel_cli/Cargo.toml
@@ -36,6 +36,7 @@ serde_regex = "1.1"
 version = "~2.0.0"
 path = "../diesel"
 default-features = false
+features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes"]
 
 [dependencies.diesel_migrations]
 version = "~2.0.0"
