--- a/diesel_bench/Cargo.toml
+++ b/diesel_bench/Cargo.toml
@@ -22,7 +22,7 @@ quaint = {version = "=0.2.0-alpha.13", optional = true, features = ["uuid"]}
 serde = {version = "1", optional = true, features = ["derive"]}
 sea-orm = {version = "0.10", optional = true, features = ["runtime-tokio-rustls"]}
 futures = {version = "0.3", optional = true}
-diesel-async = {version = "0.1", optional = true, default-features = false}
+diesel-async = {version = "0.2", optional = true, default-features = false}
 criterion-perf-events = { version = "0.2", optional = true}
 perfcnt = {version = "0.8", optional = true}
 
@@ -54,5 +54,7 @@ fast_run = []
 
 
 [patch.crates-io]
-quaint = {git = "https://github.com/prisma/quaint", rev = "08831dfb72d4d970aa62d7f4094a3c6c04c4b136"}
-diesel = {path = "../diesel"}
+quaint = {git = "https://github.com/prisma/quaint", rev = "e077df3"}
+diesel-async = { git = "https://github.com/weiznich/diesel_async", rev = "d9e219578a7e034c2714550a5a156c8e004896bc"}
+diesel = { path = "../diesel"}
+
