Update the getting started examples to use `Selectable` + `check_for_backend`
That should prevent users from running into nasty compile errors if they
try to modify these examples slightly. Will update the guide on the
webpage in a separate PR.

--- a/examples/sqlite/getting_started_step_2/Cargo.toml
+++ b/examples/sqlite/getting_started_step_2/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 publish = false
 
 [dependencies]
-diesel = { version = "2.0.0", path = "../../../diesel", features = ["sqlite"] }
+diesel = { version = "2.0.0", path = "../../../diesel", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
 dotenvy = "0.15"
 
 [[bin]]
