--- a/diesel_cli/Cargo.toml
+++ b/diesel_cli/Cargo.toml
@@ -20,7 +20,7 @@ doc = false
 
 [dependencies]
 chrono = { version = "0.4.19", default-features = false, features = ["clock", "std"] }
-clap = "4.0.2"
+clap = { version = "4.0.2", features = ["cargo", "string"] }
 clap_complete = "4"
 dotenvy = "0.15"
 heck = "0.4.0"
