Update all the crates to the 2021 edition
This is mostly just running `cargo fix --edition` and `cargo fix --edition-idioms`

--- a/diesel_migrations/migrations_internals/Cargo.toml
+++ b/diesel_migrations/migrations_internals/Cargo.toml
@@ -5,6 +5,7 @@ license = "MIT OR Apache-2.0"
 description = "Internal implementation of diesels migration mechanism"
 homepage = "https://diesel.rs"
 rust-version = "1.65.0"
+edition = "2021"
 
 [dependencies]
 serde = {version = "1", features = ["derive"]}
