Fix forgotten tests
Co-authored-by: Georg Semmler <github@weiznich.de>

--- a/diesel_table_macro_syntax/tests/basic.rs.in
+++ b/diesel_table_macro_syntax/tests/basic.rs.in
@@ -1,5 +1,7 @@
 t1 (id) {
     f0 -> Varchar,
-    f1 -> Varchar {120},
-    f2 -> Nullable<Varchar> {120},
+    #[max_length = 120]
+    f1 -> Varchar,
+    #[max_length = 120]
+    f2 -> Nullable<Varchar>,
 }
