--- a/diesel/Cargo.toml
+++ b/diesel/Cargo.toml
@@ -34,6 +34,7 @@ bitflags = { version = "2.0.0", optional = true }
 r2d2 = { version = ">= 0.8.2, < 0.9.0", optional = true }
 itoa = { version = "1.0.0", optional = true }
 time = { version = "0.3.9", optional = true, features = ["macros"] }
+paste = "1.0.12"
 
 [dependencies.diesel_derives]
 version = "~2.0.0"
