--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "diesel_migrations/migrations_macros",
     "diesel_dynamic_schema",
     "diesel_table_macro_syntax",
+    "dsl_auto_type",
     "examples/mysql/all_about_inserts",
     "examples/mysql/getting_started_step_1",
     "examples/mysql/getting_started_step_2",
