--- a/diesel_bench/Cargo.toml
+++ b/diesel_bench/Cargo.toml
@@ -11,16 +11,16 @@ autobenches = false
 [dependencies]
 dotenvy = "0.15"
 criterion = {version = "0.3.2", default-features = false, features = ["csv_output", "cargo_bench_support"]}
-sqlx = {version = "0.6", features = ["runtime-tokio-rustls"], optional = true}
+sqlx = {version = "0.7", features = ["runtime-tokio-rustls"], optional = true}
 tokio = {version = "1", optional = true}
-rusqlite = {version = "0.27", optional = true}
+rusqlite = {version = "0.29", optional = true}
 rust_postgres = {version = "0.19", optional = true, package = "postgres"}
 rust_mysql = {version = "23.0", optional = true, package = "mysql"}
 rustorm = {version = "0.20", optional = true}
 rustorm_dao = {version = "0.20", optional = true}
 quaint = {version = "=0.2.0-alpha.13", optional = true, features = ["uuid"]}
 serde = {version = "1", optional = true, features = ["derive"]}
-sea-orm = {version = "0.11", optional = true, features = ["runtime-tokio-rustls"]}
+sea-orm = {  git = "https://github.com/SeaQL/sea-orm/", branch = "sqlx-v0.7", optional = true, features = ["runtime-tokio-rustls"]}
 futures = {version = "0.3", optional = true}
 diesel-async = {version = "0.2", optional = true, default-features = false}
 criterion-perf-events = { version = "0.2", optional = true}
@@ -57,4 +57,3 @@ fast_run = []
 quaint = {git = "https://github.com/prisma/prisma-engines", rev = "8f088bb"}
 diesel-async = { git = "https://github.com/weiznich/diesel_async", rev = "d9e219578a7e034c2714550a5a156c8e004896bc"}
 diesel = { path = "../diesel"}
-
