This branch is merged and deleted now

--- a/diesel_bench/Cargo.toml
+++ b/diesel_bench/Cargo.toml
@@ -20,7 +20,7 @@ rustorm = {version = "0.20", optional = true}
 rustorm_dao = {version = "0.20", optional = true}
 quaint = {version = "=0.2.0-alpha.13", optional = true, features = ["uuid"]}
 serde = {version = "1", optional = true, features = ["derive"]}
-sea-orm = {  git = "https://github.com/SeaQL/sea-orm/", branch = "sqlx-v0.7", optional = true, features = ["runtime-tokio-rustls"]}
+sea-orm = {  git = "https://github.com/SeaQL/sea-orm/", branch = "master", optional = true, features = ["runtime-tokio-rustls"]}
 futures = {version = "0.3", optional = true}
 diesel-async = {version = "0.2", optional = true, default-features = false}
 criterion-perf-events = { version = "0.2", optional = true}
