--- a/diesel/Cargo.toml
+++ b/diesel/Cargo.toml
@@ -68,6 +68,8 @@ returning_clauses_for_sqlite_3_35 = []
 i-implement-a-third-party-backend-and-opt-into-breaking-changes = []
 nightly-error-messages = []
 r2d2 = ["diesel_derives/r2d2", "dep:r2d2"]
+chrono = ["diesel_derives/chrono", "dep:chrono"]
+time = ["diesel_derives/time", "dep:time"]
 
 [package.metadata.docs.rs]
 features = ["postgres", "mysql", "sqlite", "extras"]
