--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -191,6 +191,8 @@ jobs:
           echo "MYSQL_EXAMPLE_DATABASE_URL=mysql://root@localhost/diesel_example" >> $GITHUB_ENV
           echo "MYSQL_UNIT_TEST_DATABASE_URL=mysql://root@localhost/diesel_unit_test" >> $GITHUB_ENV
           echo "MYSQLCLIENT_LIB_DIR=C:\tools\mysql\current\lib" >> $GITHUB_ENV
+          echo "C:\tools\mysql\current\lib" >> $GITHUB_PATH
+          echo "C:\tools\mysql\current\bin" >> $GITHUB_PATH
 
       - name: Install rust toolchain
         uses: dtolnay/rust-toolchain@master
