Ignore more examples in doc builds to fix the doc publishing

--- a/examples/postgres/relations/Cargo.toml
+++ b/examples/postgres/relations/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2021"
 [dependencies]
 diesel = { version = "2.1.0", features = ["postgres"], path = "../../../diesel" }
 dotenvy = "0.15.6"
+
+[[bin]]
+name = "relations"
+doc = false
