Changes to be committed: 	modified:   examples/sqlite/all_about_inserts/Cargo.toml 	modified:   examples/sqlite/getting_started_step_1/Cargo.toml 	new file:   examples/sqlite/getting_started_step_1/README.md 	modified:   examples/sqlite/getting_started_step_2/Cargo.toml 	new file:   examples/sqlite/getting_started_step_2/README.md 	modified:   examples/sqlite/getting_started_step_3/Cargo.toml

--- a/examples/sqlite/getting_started_step_1/Cargo.toml
+++ b/examples/sqlite/getting_started_step_1/Cargo.toml
@@ -9,6 +9,7 @@ publish = false
 [dependencies]
 diesel = { version = "2.1.0", path = "../../../diesel", features = ["sqlite"] }
 dotenvy = "0.15"
+libsqlite3-sys = { version = ">=0.17.2, <0.27.0", features = ["bundled"] }
 
 [[bin]]
 name = "show_posts"
