Optimise the CI pipeline
This commit tries to reduce the time to get feedback whether or not a
build fails by only running all the tests on all platforms if basic
checks succeed. For that we first run the rustfmt + clippy check (that
builds basically all the code) and the `sqlite bundled` check (that runs
most of the tests on linux + sqlite).

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ concurrency:
 jobs:
   check_and_test:
     name: Check
+    needs: [sqlite_bundled, rustfmt_and_clippy]
     strategy:
       fail-fast: false
       matrix:
