--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -461,3 +461,15 @@ jobs:
         run: cargo +1.66.0 minimal-versions check -p diesel_migrations --all-features
       - name: Check diesel_cli
         run: cargo +1.66.0 minimal-versions check -p diesel_cli --all-features
+
+  typos:
+    name: Spell Check with Typos
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' || !github.event.pull_request.draft
+
+    steps:
+      - name: Checkout Actions Repository
+        uses: actions/checkout@v3
+
+      - name: Check the spelling of the files in our repo
+        uses: crate-ci/typos@master
