--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -396,7 +396,7 @@ jobs:
           cargo +stable clippy --tests --manifest-path examples/mysql/getting_started_step_3/Cargo.toml
           cargo +stable clippy --tests --manifest-path examples/mysql/all_about_inserts/Cargo.toml
 
-      - name: Check formating
+      - name: Check formatting
         run: cargo +stable fmt --all -- --check
 
   sqlite_bundled:
