--- a/diesel_derives/Cargo.toml
+++ b/diesel_derives/Cargo.toml
@@ -5,7 +5,7 @@ license = "MIT OR Apache-2.0"
 description = "You should not use this crate directly, it is internal to Diesel."
 documentation = "https://diesel.rs/guides/"
 homepage = "https://diesel.rs"
-repository = "https://github.com/diesel-rs/diesel/tree/master/diesel_derives"
+repository = "https://github.com/diesel-rs/diesel/"
 autotests = false
 include = ["src/**/*", "LICENSE-*"]
 rust-version = "1.66.0"
@@ -46,3 +46,4 @@ with-deprecated = []
 r2d2 = []
 chrono = []
 time = []
+
