fix test snapshots

--- a/diesel_cli/tests/print_schema/print_schema_specifying_schema_name_with_custom_type/diesel.toml
+++ b/diesel_cli/tests/print_schema/print_schema_specifying_schema_name_with_custom_type/diesel.toml
@@ -2,4 +2,4 @@
 file = "src/schema.rs"
 with_docs = true
 schema = "custom_schema"
-custom_type_derives = ["diesel::query_builder::QueryId"]
+custom_type_derives = ["diesel::query_builder::QueryId", "Clone"]
